--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "@pogoda/basic-api": "^1.1.1",
     "flexstyl": "^1.1.0",
     "vue": "^1.0.17"
   },
@@ -20,6 +21,7 @@
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-runtime": "^5.8.0",
     "chromedriver": "^2.21.2",
